<resources>
    <string name="app_name">FirstActivity</string>
    <string name="btnOK">OK</string>
    <string name="act1">Activity 1</string>
    <string name="act2">Activity 2</string>
    <string name="num1">Number 1</string>
    <string name="num2">Number 2</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="div">/</string>
    <string name="mul">*</string>
</resources>